add content pages

--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -15,3 +15,11 @@
 
   %body{class: page_classes}
     = yield
+  %nav
+    = link_to 'Home', '/'
+    |
+    = link_to 'About', '/about.html'
+    |
+    = link_to 'Order', '/order.html'
+    |
+    = link_to 'Contact', '/contact.html'
