--- a/source/stylesheets/_global.scss
+++ b/source/stylesheets/_global.scss
@@ -1,11 +1,36 @@
-.container {
-  padding: 40px;
-  display: block;
+body {
   margin: 0 auto;
-  max-width: 1200px
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 30px;
+}
+
+nav {
+  padding-top: 30px;
+  font-size: 1.3rem;
 }
 
 footer {
   padding-top: 30px;
   text-align: center;
+}
+
+.content {
+  display: block;
+  height: 400px;
+  width: 400px;
+  line-height: 400px;
+  border-radius: 50%; /* or 50% */
+  background-color: #37766C;
+  color: white;
+  text-align: center;
+  font-size: .9rem;
+}
+
+p {
+  padding-top: 125px;
+  line-height: 20px;
+  max-width: 350px;
+  margin: 0 auto;
 }
