--- a/source/stylesheets/_pages.scss
+++ b/source/stylesheets/_pages.scss
@@ -1,24 +1,16 @@
 .index {
-  .container {
-    margin: 0 auto;
+  .logo {
+    padding-top: 20px;
+    padding-bottom: 20px;
+    max-width: 600px;
+    max-height: 600px;
     display: flex;
-    flex-direction: column;
-    align-items: center;
-  
-    .logo {
-      max-width: 600px;
-      max-height: 600px;
-      display: flex;
-      justify-content: center;
+    justify-content: center;
 
-      img {
-        width: 80%;
-        height: 80%;
-      }
-    }
-
-    nav {
-      padding-top: 30px;
+    img {
+      width: 80%;
+      height: 80%;
     }
   }
+
 }
