refactoring of content and background css

--- a/source/order.html.haml
+++ b/source/order.html.haml
@@ -2,7 +2,16 @@
 title: Order | Casper Fermentables
 ----
 
-%h1 Order
-.content
-  %p
-    Coming soon!
+.container
+  .background
+    .form{style: 'padding: 15px;'}
+      .header
+        %p
+          Signup to get information about on-demand delivery options.
+        %small
+          Delivery is currently only available for 78701 78702, and 
+          78703 zip codes.
+      .form-input{style: 'padding-top: 20px'}
+        %input{placeholder: 'Email Address'}
+      %button{style: 'margin-top: 20px;, padding: 25px;'} 
+        Request Delivery Information
