--- a/source/about.html.haml
+++ b/source/about.html.haml
@@ -2,11 +2,11 @@
 title: About | Casper Fermentables
 ----
 
-%h1 About
-.content
-  %p
-    Casper Fermentables are made with precision and care in East Austin, TX. 
-    <br /><br />
-    Pickles, kimchi, and probiotic sports drinks can be found at the Hope Farmer's 
-    Market from 11 AM to 3 PM on Sundays. On-demand delivery and pick-up options
-    coming soon!
+.container
+  .background
+    %p
+      Casper Fermentables are made with precision and care in East Austin, TX. 
+      <br /><br />
+      Pickles, kimchi, and probiotic sports drinks can be found at the Hope Farmer's 
+      Market from 11 AM to 3 PM on Sundays. On-demand delivery and pick-up options
+      coming soon!
