--- a/source/contact.html.haml
+++ b/source/contact.html.haml
@@ -2,10 +2,10 @@
 title: Contact | Casper Fermentables
 ----
 
-%h1 Contact
-.content
-  %p
-    You can reach us at 
-    <br/>
-    <br/>
-    casperfermentables@gmail.com
+.container
+  .background
+    %p{style: 'line-height: 15px; padding: 80px;'}
+      You can reach us at 
+      <br/>
+      <br/>
+      casperfermentables@gmail.com
