--- a/source/stylesheets/_global.scss
+++ b/source/stylesheets/_global.scss
@@ -16,21 +16,35 @@ footer {
   text-align: center;
 }
 
-.content {
-  display: block;
-  height: 400px;
-  width: 400px;
-  line-height: 400px;
-  border-radius: 50%; /* or 50% */
-  background-color: #37766C;
-  color: white;
-  text-align: center;
-  font-size: .9rem;
+.logo {
+  padding-top: 20px;
+  padding-bottom: 20px;
+  max-width: 600px;
+  max-height: 600px;
+  display: flex;
+  justify-content: center;
+
+  img {
+    width: 80%;
+    height: 80%;
+  }
 }
 
-p {
-  padding-top: 125px;
-  line-height: 20px;
-  max-width: 350px;
-  margin: 0 auto;
+.container {
+  max-width: 500px;
+}
+
+.background {
+  position: relative;
+  display: inline-block;
+  width: 100%;
+  height: 0;
+  padding: 50% 0;
+  border-radius: 50%;
+  background-color: #37766C;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
 }
