add link styles

--- a/source/stylesheets/_global.scss
+++ b/source/stylesheets/_global.scss
@@ -16,6 +16,14 @@ footer {
   text-align: center;
 }
 
+a {
+  color: #766c37;
+}
+
+a:active {
+  color: #5E9189;
+}
+
 .logo {
   padding-top: 20px;
   padding-bottom: 20px;
