--- a/source/about.html.haml
+++ b/source/about.html.haml
@@ -7,6 +7,6 @@ title: About | Casper Fermentables
     %p
       Casper Fermentables are made with precision and care in East Austin, TX. 
       <br /><br />
-      Pickles, kimchi, and probiotic sports drinks can be found at the Hope Farmer's 
+      Pickles, mustard, and probiotic sports drinks can be found at the Hope Farmer's 
       Market from 11 AM to 3 PM on Sundays. On-demand delivery and pick-up options
       coming soon!
