add thank you page

--- a/source/order.html.haml
+++ b/source/order.html.haml
@@ -14,4 +14,5 @@ title: Order | Casper Fermentables
       .form-input{style: 'padding-top: 20px'}
         %input{name: 'reply_to', type: 'email', placeholder: 'Email Address', style: 'padding: 5px; border-radius: 10px;', required: true}
       %input{type: 'text', name: '_gotcha', style: 'display: none;'}
+      %input{type: 'hidden', name: '_next', value: '/thanks'}
       %input{type: 'submit', value: 'REQUEST DELIVERY', class: 'submit-button'} 
