add href to contact email

--- a/source/contact.html.haml
+++ b/source/contact.html.haml
@@ -8,4 +8,4 @@ title: Contact | Casper Fermentables
       You can reach us at 
       <br/>
       <br/>
-      casperfermentables@gmail.com
+      %a{href: 'mailto:casperfermentables@gmail.com', style: 'color: white;'} casperfermentables@gmail.com
