use vue and vue-router to display content

--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -10,16 +10,10 @@
     = stylesheet_link_tag :application
     = javascript_include_tag :all
     = javascript_include_tag :vue
+    = javascript_include_tag :vue_router
     
     = yield_content :assets
 
   %body{class: page_classes}
     = yield
-  %nav
-    = link_to 'Home', '/'
-    |
-    = link_to 'About', '/about.html'
-    |
-    = link_to 'Order', '/order.html'
-    |
-    = link_to 'Contact', '/contact.html'
+  
