--- a/source/stylesheets/_typography.scss
+++ b/source/stylesheets/_typography.scss
@@ -45,10 +45,11 @@ a:hover {
 }
 
 p {
-  font-size: 1.5rem;
+  font-size: 1.2rem;
+  padding: 15px;
 }
 
-button {
+button, input[type="button"] {
   font-family: Oxygen;
   font-size: 1.5rem;
   text-transform: capitalize;
