--- a/source/stylesheets/application.css.scss
+++ b/source/stylesheets/application.css.scss
@@ -1,5 +1,76 @@
 @charset "utf-8";
 @import "normalize";
-@import "global";
+@import "vendor/skeleton";
 @import "typography";
-@import "pages";
+
+nav {
+  padding-top: 30px;
+  font-size: 1.3rem;
+  text-align: center;
+}
+
+.logo {
+  margin: 0 auto;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  max-width: 600px;
+  max-height: 600px;
+  display: flex;
+  justify-content: center;
+
+  img {
+    width: 80%;
+    height: 80%;
+  }
+
+  h2 {
+    margin: 0;
+  }
+}
+
+.container {
+  max-width: 500px;
+}
+
+.green-circle {
+  position: relative;
+  display: inline-block;
+  width: 100%;
+  height: 0;
+  padding: 50% 0;
+  border-radius: 50%;
+  background-color: #37766C;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+.copy {
+  margin: 60px;
+}
+
+.submit-button {
+  margin-top: 20px;
+  padding: 10px;
+  color: white;
+  background-color: white;
+  border: 10px white solid;
+  cursor: pointer;
+}
+
+
+@media (max-width: 480px) {
+  p {
+    font-size: .6em;
+    padding: 10px;
+  }
+
+  .submit-button {
+    padding: 5px;
+    border: 6px white solid;
+    font-size: .8em;
+  }
+
+}
